Bug 227545 - Toggle Auto/Parents does not work as expected
Summary: Toggle Auto/Parents does not work as expected
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: 1.2.0
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-18 18:10 UTC by terri.bugs
Modified: 2012-06-27 10:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:
languitar: Junior_Jobs+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description terri.bugs 2010-02-18 18:10:25 UTC
Version:            (using KDE 4.3.2)
Installed from:    Ubuntu Packages

In digikam 1.1.0 the Toggle Auto/Parents applied the parents of the selected tag to the image as well. However, in digikam 1.2.0 (svn 1092129) that is not the case. 

When Toggle Auto/Parents is used, the ticks appear before keywords as is expected, but the parent tags are not recorded into the image. This can be verified with exiftool or using digikam by selecting the image after applying the tag changes (it shows only one tick in the selected keyword, no ticks in its parents).
Comment 1 Johannes Wienke 2010-02-20 16:14:08 UTC
SVN commit 1093298 by jwienke:

In ImageDescEditTab expand only matches and not also their children when toggling to display only assigned tags.

BUG: 227545

 M  +2 -11     NEWS  
 M  +3 -3      digikam/albumtreeview.cpp  
 M  +11 -8     digikam/albumtreeview.h  
 M  +1 -1      libs/imageproperties/imagedescedittab.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1093298
Comment 2 Johannes Wienke 2010-02-20 16:17:01 UTC
Whoops, this was the wrong bug I closed. Reopening... ;)
Comment 3 Johannes Wienke 2010-02-20 16:26:24 UTC
Marcel, are you working on this or should I have a look at it?
Comment 4 Marcel Wiesweg 2010-02-20 16:48:53 UTC
If you like, have a look at this!
Comment 5 Johannes Wienke 2010-02-20 16:55:12 UTC
SVN commit 1093312 by jwienke:

Don't block signal for auto parent / child toggling in checkable tree views. This prevents other connected classes from noticing things. Instead disconnect and reconnect.

Also ensure that the root item isn't changed.

BUG: 227545

 M  +2 -2      NEWS  
 M  +4 -2      digikam/tagcheckview.cpp  
 M  +3 -1      libs/models/abstractalbummodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1093312