In ImageDescEditTab expand only matches and not also their children when toggling to display only assigned tags.

BUG: 227545

svn path=/trunk/extragear/graphics/digikam/; revision=1093298